Cabal-Version: >= 1.6
Name:         Violat
Version:      0.1.0
Synopsis:     A
Description:
              B
Category:     
License:      WTFPL 2.0
License-File: 
Author:       Niels G. W. Serup
Copyright:    2013 Niels G. W. Serup
Maintainer:   Niels G. W. Serup <ngws@metanohi.name>
Build-Type:   Simple
Homepage:     http://metanohi.name/projects/violat/
Data-Files:   README.txt COPYING.txt CHANGELOG.txt
Depends: base, SDL, SDL-ttf, SDL-image, SDL-mixer, fclabels

source-repository head
    type:     git
    location: git://metanohi.name/violat
